--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <li><i class="fa-solid fa-users-gear"></i>Ongoing Support</li>
             <li><i class="fa-solid fa-coins"></i>SEO Analytics</li>
           </ul>
-          <a class="more" href="#">Find out more</a>
+          <a class="more" href="projects.html">Find out more</a>
         </div>
 
         <div class="donate-form-container">
