added mygsm village

--- a/projects.html
+++ b/projects.html
@@ -288,7 +288,7 @@
                         </div>
                         <div class="work my-5">
                             <h2 class="mt-3">
-                                <b>Benotek</b>
+                                <b>Engineering</b>
                             </h2>
                             <span class="pb-3 pt-3">
                                 <year class="text-light px-2 rounded-5">2024</year>
@@ -298,6 +298,27 @@
                                 This is a business website built with Wordpress and PHP with Optimised SEO structure and integrated analytic tools to track traffic.
                             </p>
                              <p><a href="https://benotek.com/">View Demo</a></p>
+                        </div>
+                        <hr class="d-md-none" />
+                    </section>
+                     <hr class="d-none d-md-block" />
+                    <section class="works d-flex flex-column flex-md-row m-auto">
+                    
+                        <div class="picture">
+                            <img src="images/myGSMvillage.webp" alt="" />
+                        </div>
+                        <div class="work my-5">
+                            <h2 class="mt-3">
+                                <b>GSM Repair</b>
+                            </h2>
+                            <span class="pb-3 pt-3">
+                                <year class="text-light px-2 rounded-5">2025</year>
+                                <project>Business Website</project>
+                            </span>
+                            <p class="mt-3">
+                                This is a business website built with Wordpress and PHP with Optimised SEO structure and integrated analytic tools to track traffic.
+                            </p>
+                             <p><a href="https://www.mygsmvillage.com/">View Demo</a></p>
                         </div>
                         <hr class="d-md-none" />
                     </section>
