--- a/projects.html
+++ b/projects.html
@@ -316,7 +316,7 @@
                                 <project>Business Website</project>
                             </span>
                             <p class="mt-3">
-                                This is a business website built with Wordpress and PHP with Optimised SEO structure and integrated analytic tools to track traffic.
+                                This is a website that connects gsm repairers with cients built with Wordpress and PHP and designed to scale up traffic.
                             </p>
                              <p><a href="https://www.mygsmvillage.com/">View Demo</a></p>
                         </div>
